# tolino_news

./: .gitignore  49-load_news.rules  50-automountusb.rules  50-load_news.rules  MANIFEST.in  cron_daily_news  dev_install.sh  dev_uninstall.sh  dev_update.sh  ereader_name.json  install.sh  load_news.py  load_news.service  load_news2.py  mnt-ereader.mount  pyproject.toml  readme.rst  send_signal.sh  setup.cfg  uninstall.sh  update.sh
news_loader/: config.toml  load_news.py
news_loader_recipes/: comics.recipe  comics_rss_links.json  disk-uuid.json  reveil.credentials  webdav.json
src/news_loader/: apps.py  jobs.py  models.py  views.py
src/tolino_news/: __init__.py  apps.py  jobs.py  models.py  views.py
src/tolino_news/models/: __init__.py  cloud_connectors.py  configurators.py  epub_creators.py  interfaces.py
tests/: test_cloud_connectors.py  test_configurators.py  test_epubcreator.py  test_models.py  test_recipe.recipe
