[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "news_loader"
version = "0.1"
authors = [
    {name="Imam Usmani"},
]
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

description = "deamon fetching news to be read by ereader"

dependencies = [
    'xdg',
    'pyocclient',
    'feedparser',
    'tomli-w',
    'tomli'
]

[project.optional-dependencies]
dev = [
	'pytest',
	'flake8',
	'ipython',
	'sphinx',
	'build',
	'twine',
	'sphinx-rtd-theme'
]

[project.urls]
"Source Code" = "https://github.com/ImamAzim/news_loader"
"Documentation" = "https://news_loader.readthedocs.io/en/latest/index.html"

[project.scripts]
news_loader = "news_loader.apps:start_news_loader_menu"
news_loader_run = "news_loader.jobs:run_news_loader_job"
