[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "tolino_news"
version = "0.1"
authors = [
    {name="Imam Usmani"},
]
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

description = "deamon fetching news to be read by ereader"

dependencies = [
    'xdg-base-dirs',
    'tomli-w',
    'pyncclient',
    'varboxes',
    'python-crontab',
    'pytolino>=2.2',
]

[project.optional-dependencies]
dev = [
	'pytest',
	'flake8',
	'ipython',
	'sphinx',
	'build',
	'twine',
	'sphinx-rtd-theme',
]

[project.urls]
"Source Code" = "https://github.com/ImamAzim/tolino_news"
"Documentation" = "https://tolino_news.readthedocs.io/en/latest/index.html"

[project.scripts]
tolino_news = "tolino_news.apps:start_news_loader_menu"
tolino_news_run = "tolino_news.jobs:run_news_loader_job"
token_update = "tolino_news.jobs:get_new_token_job"
