[metadata]
name=news loader
author = Imam Usmani
description-file = README.rst
license = GNU General Public License v3.0
classifier = 
    Intended Audience :: general public
    Natural Language :: English
    Programming Language :: Python :: 3.10
    
description=deamon fetching news to be read by ereader

[options]
zip_safe = False
include_package_data = True
install_requires =
	flake8
	pytest
	xdg
	pyocclient
	feedparser
packages = find:

[options.entry_points]
console_scripts =
	fetch_daily_news = news_loader.load_news:fetch_daily_news
